[package]
name = "Rust-Core-BP"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.46.1", features = ["full"] }


[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
